# Recollection

./: .env  README.md  create_project.sh  pyproject.toml
backend/: config.py  main.py
backend/domain/: commands.py  entities.py  events.py
backend/repositories/: libsql_repo.py  minio_repo.py
backend/services/: embedding.py  ocr_tpu.py  screenshot.py
backend/use_cases/: capture.py  search.py
backend/utils/: image_utils.py  time_utils.py
docker/: Dockerfile  docker-compose.yml
frontend/: package.json
frontend/public/: index.html  styles.css
frontend/src/: App.jsx
frontend/src/components/: Timeline.jsx
frontend/src/services/: api.js  storage.js
scripts/: build_tpu_models.sh  init_minio.sh
tests/: test_config.py
tests/domain/: test_entities.py
tests/features/: capture_screenshot.feature
tests/integration/: test_capture_screenshot.py
tests/repositories/: test_libsql_repo.py  test_minio_repo.py
tests/services/: test_screenshot.py
tests/steps/: test_capture_screenshot_steps.py
